// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`matches enzyme snapshots matches snapshot - active 1`] = `
<span
  className="IconButton active"
  onClick={[Function]}
>
  <Memo()
    name="Check"
  />
   
</span>
`;

exports[`matches enzyme snapshots matches snapshot - disbled 1`] = `
<span
  className="IconButton disabled"
  onClick={null}
>
  <Memo()
    name="Check"
  />
   
</span>
`;

exports[`matches enzyme snapshots matches snapshot - mixed 1`] = `
<span
  className="IconButton no-padding fill"
  onClick={[Function]}
>
  <StyledText
    className="ping-message"
    color="accent-dark"
    size="xsmall"
    weight="bold"
  >
    1
  </StyledText>
  <Memo()
    fill={true}
    name="Check"
  />
   
</span>
`;

exports[`matches enzyme snapshots matches snapshot - with ping 1`] = `
<span
  className="IconButton"
  onClick={[Function]}
>
  <div
    className="ping"
  />
  <Memo()
    name="Check"
  />
   
</span>
`;

exports[`matches enzyme snapshots matches snapshot - with ping message 1`] = `
<span
  className="IconButton"
  onClick={[Function]}
>
  <StyledText
    className="ping-message"
    color="accent-dark"
    size="xsmall"
    weight="bold"
  >
    1
  </StyledText>
  <Memo()
    name="Check"
  />
   
</span>
`;

exports[`matches enzyme snapshots matches snapshot - with tooltip 1`] = `
<span
  aria-label="test"
  className="IconButton"
  data-balloon-pos="right"
  onClick={[Function]}
>
  <Memo()
    name="Check"
  />
   
</span>
`;

exports[`matches enzyme snapshots matches snapshot 1`] = `
<span
  className="IconButton"
  onClick={[Function]}
>
  <Memo()
    name="Check"
  />
   
</span>
`;

exports[`matches test renderer snapshot serializes the styles 1`] = `
<span
  className="IconButton"
  onClick={[Function]}
>
  <span
    className="Icon"
  >
    <svg
      className="lucide lucide-check"
      fill="none"
      height={24}
      stroke="currentColor"
      strokeLinecap="round"
      strokeLinejoin="round"
      strokeWidth={2}
      viewBox="0 0 24 24"
      width={24}
      xmlns="http://www.w3.org/2000/svg"
    >
      <polyline
        points="20 6 9 17 4 12"
      />
    </svg>
  </span>
   
</span>
`;
